--- a/app/globals.css
+++ b/app/globals.css
@@ -136,6 +136,6 @@ code {
 button {
   z-index: 1000 !important;
 }
-.Button_btn-custom__pRdL3 {
+.contact.Button_btn-custom__pRdL3 {
   font-size: 14px !important;
 }
